--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,5 +1,8 @@
+.container {
+  background-color: #609fc6;
+}
 .filters {
-  background: white;
+  background: #3a94cb;
   width: 100%;
 }
 .filters li {
@@ -23,7 +26,7 @@
   width: 300px;
   height: 350px;
   margin: 50px auto;
-  background: #fff;
+  background: #3a94cb;
   border-radius: 5px;
   box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
 }
@@ -56,7 +59,7 @@
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
   font-weight: 300;
-  color: #999;
+  color: #000;
 }
 .widget h1 {
   margin: 60px 0 20px;
@@ -70,7 +73,7 @@
   position: absolute;
   top: 20px;
   padding: 0;
-  background: #2cdfd3;
+  background: #3a94cb;
 }
 .widget ul.position-left {
   left: -26px;
